# algorist

./: Cargo.toml  README.md  log  rust-toolchain.toml  rustfmt.toml
.helix/: languages.toml
algorist-grapht/: Cargo.toml
algorist-grapht-macros/: Cargo.toml
algorist-grapht-macros/src/: lib.rs
algorist-grapht/src/: api.rs  backend.rs  fields.rs  lib.rs  macros.rs
algorist-grapht/src/api/: routines.rs
algorist-grapht/src/api/routines/: basic.rs
algorist-grapht/src/api/routines/basic/: board.rs
algorist-grapht/src/backend/: arc.rs  iter.rs  iter_mut.rs  vertex.rs
notes/: bib.yml  main.typ
