[workspace]
resolver = "3"
members = ["algorist-grapht", "algorist-grapht-macros"]

[workspace.package]
version = "0.1.0"
categories = ["algorithms", "data-structures", "mathematics"]
edition = "2024"
keywords = ["dsa"]
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/dybucc/algorist"
description = "DSA galore."

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"
