[package]
name = "algorist-grapht"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
algorist-grapht-macros = { path = "../algorist-grapht-macros" }
bumpalo = { version = "3.19.1", features = ["allocator_api", "boxed", "collections", "std"] }
itertools = "0.14.0"
thiserror = "2.0.18"
